Adding ability to include descriptions on attached files

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -14,6 +14,8 @@ authentication.testuser = rod
 authentication.testuser.displayName = Roderick Testuser
 authentication.testcredentials = koala
 
+assets.directory = web/src/main/webapp
+
 base.application.uri = /piecework/secure
 base.public.uri = /piecework/public
 base.service.uri = /piecework/api
