--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -46,7 +46,7 @@
 		<commons-beanutils.version>1.8.3</commons-beanutils.version>
 		<commons-collections.version>3.2</commons-collections.version>
 		<commons-http-client.version>3.0.1</commons-http-client.version>
-        <commons-http-components-client.version>4.2.5</commons-http-components-client.version>
+        <commons-http-components-client.version>4.3.1</commons-http-components-client.version>
         <commons-email.version>1.3.1</commons-email.version>
 		<commons-io.version>1.4</commons-io.version>
 		<commons-lang.version>2.3</commons-lang.version>
@@ -86,6 +86,7 @@
 		<spring.security.javaconfig.version>1.0.0.CI-SNAPSHOT</spring.security.javaconfig.version>
         <uuid-generator.version>3.1.3</uuid-generator.version>
 		<xalan.version>2.7.0</xalan.version>
+        <yuicompressor.version>2.4.7</yuicompressor.version>
 	</properties>
 	<profiles>
 		<profile>
@@ -174,6 +175,11 @@
 				<artifactId>querydsl-mongodb</artifactId>
 				<version>${querydsl.version}</version>
 			</dependency>
+            <dependency>
+                <groupId>com.yahoo.platform.yui</groupId>
+                <artifactId>yuicompressor</artifactId>
+                <version>${yuicompressor.version}</version>
+            </dependency>
 			<dependency>
 				<groupId>commons-beanutils</groupId>
 				<artifactId>commons-beanutils</artifactId>
@@ -186,12 +192,12 @@
 				<version>${commons-collections.version}</version>
 				<type>jar</type>
 			</dependency>
-			<dependency>
-				<groupId>commons-httpclient</groupId>
-				<artifactId>commons-httpclient</artifactId>
-				<version>${commons-http-client.version}</version>
-				<type>jar</type>
-			</dependency>
+			<!--<dependency>-->
+				<!--<groupId>commons-httpclient</groupId>-->
+				<!--<artifactId>commons-httpclient</artifactId>-->
+				<!--<version>${commons-http-client.version}</version>-->
+				<!--<type>jar</type>-->
+			<!--</dependency>-->
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
