Various fixes to improve form handling

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -30,6 +30,7 @@ process_is_misconfigured     = Process is not correctly configured
 process_not_deployed         = Process has not yet been deployed
 
 request_does_not_match       = Form cannot be submitted to this URL
+request_expired              = This request has expired
 request_id_required          = A valid request id must be provided
 request_type_required        = A valid request type must be provided
 
