add GroupService and renamed 'ldap.group.search.filter' to 'ldap.group.member.search.filter' and used 'ldap.group.search.filter' for group service

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -41,6 +41,7 @@ keystore.password =
 ldap.attribute.id.internal = uid
 ldap.attribute.id.external = uid
 ldap.attribute.name.display = cn
+ldap.attribute.group.member = member
 ldap.authentication.user = rod
 ldap.authentication.password = koala
 ldap.person.base = dc=springframework,dc=org
@@ -51,7 +52,8 @@ ldap.person.dn = uid={0},ou=people
 ldap.group.base = ou=groups,dc=springframework,dc=org
 ldap.group.url = ldap://127.0.0.1:33389
 ldap.group.search.base =
-ldap.group.search.filter = member=uid={1},ou=people,dc=springframework,dc=org
+ldap.group.search.filter = cn={0}
+ldap.group.member.search.filter = member=uid={1},ou=people,dc=springframework,dc=org
 
 mail.from.address = piecework-noreply@nowhere.com
 mail.from.label = Piecework
