add NotificationService interface and EmailNotificationService class. Build notifications from data stored in process definition files.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -202,5 +202,9 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+        </dependency>
     </dependencies>
 </project>
