Reorganizing code and working on anonymous form submission

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -18,7 +18,7 @@ insufficient_permission      = You do not have the necessary permissions to comp
 interaction_id_invalid 		 = Interaction identifier should be not provided on creation
 interaction_invalid 	 	 = Interaction with key {0} does not exist or does not belong to the process definition key provided
 
-invalid_assignment           = Invalid user provided
+invalid_assignment           = Cannot assign task to this user - process may be configured to only allow assignment to a specific group
 invalid_process_status       = Unable to update process status or process is already in that state
 
 not_editable                 = This item cannot be edited or deleted
