Cleaning up example encryption logic to use key provider

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -23,13 +23,9 @@ base.service.uri = /piecework/api
 certificate.subject.header = HTTP_HEADER_CERTIFICATE_SUBJECT_NAME
 certificate.issuer.header  = HTTP_HEADER_CERTIFICATE_ISSUER_NAME
 
-encryption.cipher.algorithm = AES/CBC/PKCS5Padding
-encryption.factory.algorithm = PBKDF2WithHmacSHA1
+encryption.keys.active = INSECURE:t8Cvve000A02jFOVosjBlA==
 encryption.key.algorithm = AES
-encryption.key.name = INSECURE
 encryption.key.size = 128
-encryption.key.value = ThisNeedsToBeChanged
-encryption.pseudorandom.generator = SHA1PRNG
 
 host.uri = http://localhost:8000
 
