--- a/core/pom.xml
+++ b/core/pom.xml
@@ -89,10 +89,10 @@
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-rs-extension-providers</artifactId>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>org.apache.directory.server</groupId>
 			<artifactId>apacheds-all</artifactId>
-		</dependency>
+		</dependency-->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
