Fixing bugs in public form submit

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -23,6 +23,8 @@ base.service.uri = /piecework/api
 certificate.subject.header = HTTP_HEADER_CERTIFICATE_SUBJECT_NAME
 certificate.issuer.header  = HTTP_HEADER_CERTIFICATE_ISSUER_NAME
 
+demo.mode = true
+
 encryption.keys.active = INSECURE:t8Cvve000A02jFOVosjBlA==
 encryption.key.algorithm = AES
 encryption.key.size = 128
