Various fixes and improvements to exception handling, content providers, and directives

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -16,6 +16,7 @@ authentication.testcredentials = koala
 
 assets.directory = web/src/main/webapp
 
+base.filesystem.root = .
 base.application.uri = /piecework/ui
 base.public.uri = /piecework/public
 base.service.uri = /piecework/api
