--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -52,7 +52,7 @@
 		<commons-lang.version>2.3</commons-lang.version>
 		<commons-validator.version>1.4.0</commons-validator.version>
 		<cxf.version>2.7.8</cxf.version>
-		<ehcache.version>2.6.5</ehcache.version>
+		<ehcache.version>2.8.0</ehcache.version>
 		<ehcache-spring-annotations.version>1.2.0</ehcache-spring-annotations.version>
 		<flapdoodle.version>1.33</flapdoodle.version>
 		<geronimo-annotation.version>1.1.1</geronimo-annotation.version>
@@ -192,15 +192,15 @@
 				<version>${commons-collections.version}</version>
 				<type>jar</type>
 			</dependency>
-			<!--<dependency>-->
-				<!--<groupId>commons-httpclient</groupId>-->
-				<!--<artifactId>commons-httpclient</artifactId>-->
-				<!--<version>${commons-http-client.version}</version>-->
-				<!--<type>jar</type>-->
-			<!--</dependency>-->
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
+                <version>${commons-http-components-client.version}</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient-cache</artifactId>
                 <version>${commons-http-components-client.version}</version>
                 <type>jar</type>
             </dependency>
@@ -276,9 +276,8 @@
 			</dependency>
 			<dependency>
 				<groupId>net.sf.ehcache</groupId>
-				<artifactId>ehcache-core</artifactId>
+				<artifactId>ehcache</artifactId>
 				<version>${ehcache.version}</version>
-				<!-- <scope>runtime</scope> -->
 			</dependency>
 			<dependency>
 				<groupId>org.antlr</groupId>
