--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -4,8 +4,8 @@ activiti.datasource.driver.name = org.h2.Driver
 activiti.datasource.url = jdbc:h2:file:data/piecework;DB_CLOSE_DELAY=1000
 activiti.datasource.username = sa
 activiti.datasource.password =
-activiti.datasource.ddl.auto = update
-activiti.datasource.show.sql = true
+activiti.datasource.use.ssl = false
+activiti.datasource.require.ssl = false
 
 application.name = Piecework
 
