--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -483,6 +483,12 @@
 				<version>${spring.version}</version>
 				<type>jar</type>
 			</dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${spring.version}</version>
+                <type>jar</type>
+            </dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
