--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -39,6 +39,7 @@
 
 		<activemq.version>5.5.0</activemq.version>
 		<antisamy.version>1.4.4</antisamy.version>
+        <apache-poi.version>3.9</apache-poi.version>
 		<aspectj.weaver.version>1.5.4</aspectj.weaver.version>
         <bouncycastle.version>1.50</bouncycastle.version>
 		<camel.version>2.8.0</camel.version>
@@ -208,6 +209,18 @@
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpmime</artifactId>
                 <version>${commons-http-components-client.version}</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${apache-poi.version}</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${apache-poi.version}</version>
                 <type>jar</type>
             </dependency>
             <dependency>
