--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -26,6 +26,9 @@
               </goals>
             </execution>
           </executions>
+          <configuration>
+             <forkmode>never</forkmode>
+          </configuration>
         </plugin>
       </plugins>
     </build>
@@ -46,7 +49,13 @@
           <version>6.3.1</version>
           <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>com.google.inject</groupId>
+          <artifactId>guice</artifactId>
+          <version>3.0</version>
+        </dependency>
     </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
