Refactoring of validation to use filters and add unit tests

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -328,6 +328,13 @@
 				<version>${cxf.version}</version>
 				<type>jar</type>
 			</dependency>
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-transports-http-jetty</artifactId>
+                <version>${cxf.version}</version>
+                <type>jar</type>
+                <scope>test</scope>
+            </dependency>
 			<dependency>
 				<groupId>org.apache.activemq</groupId>
 				<artifactId>activemq-camel</artifactId>
