--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -39,6 +39,7 @@ request_type_required        = A valid request type must be provided
 screen_id_invalid 			 = Screen identifier should not be provided on creation
 
 system_action_only           = This action can only be taken by an authenticated system
+system_misconfigured         = The system encountered an unexpected exception: {0}
 
 subtask_create_invalid       = Sub Task Creation Failed
 task_action_invalid          = Task must have a valid action of COMPLETE, REJECT, SAVE, or VALIDATE
