--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -5,6 +5,7 @@ attachment_is_too_large      = File cannot be larger than {0} bytes!
 attachment_does_not_exist    = Attachment with key {0} does not exist
 
 certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
+content_cannot_be_retrieved  = Unable to retrieve content for the following reason: {0}
 content_cannot_be_stored     = Unable to store content for the following reason: {0}
 
 encryption_error             = Unable to correctly store value for {0}
