Fix to bug that could incorrectly validate fields as empty when not submitted on a save or attach

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -130,6 +130,17 @@
 			<artifactId>groovy</artifactId>
 			<version>1.7.5</version>
 		</dependency>
+        <dependency>
+            <groupId>com.github.fakemongo</groupId>
+            <artifactId>fongo</artifactId>
+            <version>1.4.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
