--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -6,6 +6,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c %x - %m%n
 
 log4j.logger.edu.uw=DEBUG
-log4j.logger.piecework=DEBUG
+log4j.logger.piecework=INFO
+log4j.logger.org.springframework=ERROR
 log4j.logger.org.springframework.security=ERROR
-log4j.logger.org.springframework.data=DEBUG
+log4j.logger.org.springframework.data=ERROR
